--- a/oddity music.html
+++ b/oddity music.html
@@ -193,7 +193,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Oddity Music. All rights reserved.</p>
+		<p>© ODDITY MUSIC. ALL RIGHTS RESERVED. 
+		<br class="mblock">ALL OF ODDITY MUSIC’S CONTENT IS COPYRIGHTED.</p>
     </footer>
 </body>
 </html>
