--- a/artists.html
+++ b/artists.html
@@ -5,19 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artists - Oddity Music</title>
     <style>
-        body {
+       body {
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #000;
             color: #fff;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .video-container iframe {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 120%;
+            height: 120%;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
         }
 
         header {
-            background-color: #000;
-            padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 20px 40px;
+            background-color: rgba(0, 0, 0, 0.8);
+            position: relative;
+            z-index: 1;
+        }
+
+        header .logo img {
+            height: 50px; /* Adjust logo size */
         }
 
         header h1 {
@@ -27,45 +56,165 @@
             letter-spacing: 2px;
         }
 
-        nav {
-            display: flex;
-            gap: 20px;
+        .menu-bar {
+            width: 100%;
+            background-color: rgba(17, 17, 17, 0.8);
+            padding: 10px 0;
+            text-align: center;
+            position: relative;
+            z-index: 1;
         }
 
-        nav a {
+        .menu-bar nav {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            transition: transform 0.3s ease;
+        }
+
+        .menu-bar nav a {
             color: #fff;
             text-decoration: none;
             font-weight: bold;
             text-transform: uppercase;
+            padding: 10px;
+            font-size: 14px;
+            transition: color 0.3s ease;
         }
 
-        nav a:hover {
-            text-decoration: underline;
+        .menu-bar nav a:hover {
+            color: #4a90e2; /* Hover color */
+        }
+
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            cursor: pointer;
+        }
+
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: #fff;
+            transition: all 0.3s ease;
+        }
+
+        .menu-bar.active nav {
+            transform: translateX(0); /* Sliding effect */
+        }
+
+        .menu-bar nav.closed {
+            transform: translateX(100%); /* Hidden off screen */
+        }
+
+        .content {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .content h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+        }
+
+        footer {
+            text-align: center;
+            padding: 9px;
+            font-size: 9px;
+            line-height: 10px;
+            background-color: rgba(0, 0, 0, 0);
+            color: #fff;
+            position: relative;
+            z-index: 1;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .menu-bar {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                background-color: rgba(0, 0, 0, 0.9);
+                transform: translateX(100%);
+                transition: transform 0.3s ease;
+            }
+
+            .menu-bar.active {
+                transform: translateX(0);
+            }
+
+            .menu-bar nav {
+                flex-direction: column;
+                gap: 15px;
+                align-items: center;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .hamburger.active div:nth-child(1) {
+                transform: rotate(45deg);
+                position: relative;
+                top: 6px;
+            }
+
+            .hamburger.active div:nth-child(2) {
+                opacity: 0;
+            }
+
+            .hamburger.active div:nth-child(3) {
+                transform: rotate(-45deg);
+                position: relative;
+                top: -6px;
+            }
         }
 
         .section {
-            padding: 60px 20px;
+            padding: 40px 10px;
             text-align: center;
         }
 
         .section h2 {
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 20px;
             text-transform: uppercase;
         }
 
         .artist-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 20px;
             margin-top: 40px;
+            padding: 0 10px;
         }
 
         .artist-card {
             background-color: #111;
-            padding: 20px;
+            padding: 15px;
             border-radius: 8px;
             text-align: center;
+            overflow: hidden;
+            position: relative;
+            width: 300px;
+            transition: transform 0.5s ease, padding 0.5s ease; /* Transition pour l'élargissement horizontal */
         }
 
         .artist-card img {
@@ -75,31 +224,72 @@
         }
 
         .artist-card h3 {
-            margin: 15px 0 10px;
-            font-size: 1.5em;
+            margin: 10px 0 5px;
+            font-size: 1.2em;
         }
 
         .artist-card p {
-            font-size: 1em;
+            font-size: 0.9em;
             color: #aaa;
+            opacity: 0;
+            max-height: 0;
+            transition: opacity 0.3s ease, max-height 0.3s ease;
+            visibility: hidden; /* Masquer initialement la description */
+            position: absolute;
+            bottom: 15px;
+            left: 15px;
+            right: 15px;
+            z-index: 1;
+        }
+
+        .artist-card:hover {
+            transform: scaleX(1.2); /* Élargissement horizontal de la carte */
+        }
+
+        .artist-card:hover p {
+            opacity: 1;
+            max-height: 100px;
+            visibility: visible; /* Afficher la description au survol */
         }
 
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #000;
+            padding: 9px;
+            font-size: 9px;
+            line-height: 10px;
+            background-color: rgba(0, 0, 0, 0);
             color: #fff;
+            position: relative;
+            z-index: 1;
         }
 
-        footer p {
-            margin: 0;
-            font-size: 0.9em;
+        @media (max-width: 600px) {
+            .artist-grid {
+                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            }
+
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            header h1 {
+                font-size: 1.5em;
+            }
+
+            .menu-bar nav {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Oddity Music</h1>
+    </header>
+
+    <div class="menu-bar">
         <nav>
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
@@ -107,7 +297,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-    </header>
+    </div>
 
     <section class="section">
         <h2>Our Artists</h2>
@@ -115,33 +305,37 @@
 
         <div class="artist-grid">
             <div class="artist-card">
-                <img src="artist1.jpg" alt="Artist 1">
-                <h3>Artist Name 1</h3>
-                <p>Short description about Artist 1 and their style or achievements.</p>
+                <img src="https://i.pinimg.com/474x/28/32/e4/2832e4cfdd0b7f390261e8aa4086cc46.jpg" alt="Artist 1">
+                <h3>XG</h3>
+                <p>XG is a multicultural girl group formed by XGALX, a global entertainment company. The group is known for its diverse members, each bringing unique backgrounds and talents from different countries, including Japan, South Korea, and the United States. XG made its debut in 2022, quickly gaining attention for their high-energy performances, powerful vocals, and sophisticated choreography.
+
+                Their music blends elements of pop, hip-hop, and R&B, creating a dynamic and versatile sound. XG is recognized for its commitment to both artistic quality and boundary-pushing music videos, often incorporating strong storytelling and visual artistry. The group is positioned as a global act, aiming to break into international markets with their multilingual releases and wide-reaching appeal.
+
+                XG stands out in the K-pop scene not only for their musical talent but also for their bold, empowering messages in their lyrics. Each member brings a distinctive charm, contributing to the group's collective identity. With their blend of musical skill, cultural influence, and international appeal, XG is an exciting force to watch in the global music scene.</p>
             </div>
 
             <div class="artist-card">
-                <img src="artist2.jpg" alt="Artist 2">
-                <h3>Artist Name 2</h3>
+                <img src="https://i.pinimg.com/736x/44/c1/0b/44c10b69f0a2493862a3806f6af9bdc7.jpg" alt="Artist 2">
+                <h3>BOYNEXTDOOR</h3>
                 <p>Short description about Artist 2 and their style or achievements.</p>
             </div>
-
-            <div class="artist-card">
-                <img src="artist3.jpg" alt="Artist 3">
-                <h3>Artist Name 3</h3>
-                <p>Short description about Artist 3 and their style or achievements.</p>
+			<div class="artist-card">
+                <img src="https://i.pinimg.com/736x/44/c1/0b/44c10b69f0a2493862a3806f6af9bdc7.jpg" alt="Artist 2">
+                <h3>BOYNEXTDOOR</h3>
+                <p>Short description about Artist 2 and their style or achievements.</p>
             </div>
-
-            <div class="artist-card">
-                <img src="artist4.jpg" alt="Artist 4">
-                <h3>Artist Name 4</h3>
-                <p>Short description about Artist 4 and their style or achievements.</p>
+			<div class="artist-card">
+                <img src="https://i.pinimg.com/736x/44/c1/0b/44c10b69f0a2493862a3806f6af9bdc7.jpg" alt="Artist 2">
+                <h3>BOYNEXTDOOR</h3>
+                <p>Short description about Artist 2 and their style or achievements.</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Oddity Music. All rights reserved.</p>
+        <p>© ODDITY MUSIC. ALL RIGHTS RESERVED. <br class="mblock">ALL OF ODDITY MUSIC’S CONTENT IS COPYRIGHTED.</p>
     </footer>
+	
 </body>
 </html>
+
