--- a/index.html
+++ b/index.html
@@ -3,21 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oddity Music</title>
+    <title>Home - Oddity Music</title>
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #000;
             color: #fff;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            overflow-x: hidden; /* Prevent horizontal scroll */
         }
 
+        /* Video background */
+        .video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .video-container iframe {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 120%;
+            height: 120%;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+        }
+
+        /* Header styles */
         header {
-            background-color: #000;
-            padding: 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 20px 40px;
+            background-color: rgba(0, 0, 0, 0.8);
+            position: relative;
+            z-index: 1;
         }
 
         header h1 {
@@ -27,94 +55,140 @@
             letter-spacing: 2px;
         }
 
-        nav {
-            display: flex;
-            gap: 20px;
+        /* Mobile Hamburger Menu */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            cursor: pointer;
         }
 
-        nav a {
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: #fff;
+            transition: all 0.3s ease;
+        }
+
+        /* Menu Bar */
+        .menu-bar {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+        }
+
+        .menu-bar nav a {
             color: #fff;
             text-decoration: none;
             font-weight: bold;
             text-transform: uppercase;
+            padding: 10px;
+            font-size: 14px;
+            transition: color 0.3s ease;
         }
 
-        nav a:hover {
-            text-decoration: underline;
+        .menu-bar nav a:hover {
+            color: #4a90e2; /* Hover color */
         }
 
-        .hero {
-            height: 100vh;
+        /* Fullscreen mobile menu */
+        .fullscreen-menu {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            transform: translateX(100%);
+            transition: transform 0.3s ease;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: url('hero-image.jpg') no-repeat center center/cover;
+        }
+
+        .fullscreen-menu.open {
+            transform: translateX(0);
+        }
+
+        .fullscreen-menu nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+        }
+
+        /* Content Section */
+        .content {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
-            padding: 20px;
+            position: relative;
+            z-index: 1;
         }
 
-        .hero h2 {
-            font-size: 3em;
-            margin: 0;
-            text-transform: uppercase;
-        }
-
-        .hero p {
-            font-size: 1.2em;
-            margin: 20px 0;
-            max-width: 600px;
-        }
-
-        .hero button {
-            padding: 10px 20px;
-            font-size: 1em;
-            background-color: #fff;
-            color: #000;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .hero button:hover {
-            background-color: #ddd;
-        }
-
-        .section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        .section h3 {
-            font-size: 2.2em;
+        .content h2 {
+            font-size: 2em;
             margin-bottom: 20px;
             text-transform: uppercase;
         }
 
-        .section p {
-            font-size: 1.1em;
-            margin-bottom: 40px;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
+        /* Footer styles */
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #000;
+            padding: 9px;
+            font-size: 9px;
+            line-height: 10px;
+            background-color: rgba(0, 0, 0, 0);
             color: #fff;
+            position: relative;
+            z-index: 1;
         }
 
-        footer p {
-            margin: 0;
-            font-size: 0.9em;
+        /* Media queries for responsiveness */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: center;
+                padding: 20px;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .menu-bar {
+                display: none; /* Hide default menu on mobile */
+            }
+
+            footer {
+                font-size: 12px;
+                padding: 15px;
+            }
         }
     </style>
 </head>
 <body>
+
+    <!-- Background video -->
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/56OgVkAXJfo?autoplay=1&mute=1&loop=1&playlist=56OgVkAXJfo&controls=0&showinfo=0&modestbranding=1" frameborder="0" allowfullscreen></iframe>
+    </div>
+
+    <!-- Header -->
     <header>
         <h1>Oddity Music</h1>
+        <!-- Hamburger Menu for mobile -->
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+
+    <!-- Menu Bar -->
+    <div class="menu-bar">
         <nav>
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
@@ -122,21 +196,38 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-    </header>
+    </div>
 
-    <section class="hero">
+    <!-- Fullscreen Mobile Menu -->
+    <div class="fullscreen-menu" id="fullscreenMenu">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="shop.html">Shop</a>
+            <a href="artists.html">Artists</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+
+    <!-- Content Section -->
+    <div class="content">
         <h2>Welcome to Oddity Music</h2>
-        <p>Discover unique sounds, exceptional artists, and an unparalleled music experience. Your journey into the world of music starts here.</p>
-        <button onclick="window.location.href='shop.html'">Explore Our Shop</button>
-    </section>
+    </div>
 
-    <section class="section">
-        <h3>Our Vision</h3>
-        <p>At Oddity Music, we strive to bring you the most eclectic and inspiring sounds from around the globe. Join us in celebrating music that transcends boundaries.</p>
-    </section>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Oddity Music. All rights reserved.</p>
+        <p>© ODDITY MUSIC. ALL RIGHTS RESERVED. 
+        <br class="mblock">ALL OF ODDITY MUSIC’S CONTENT IS COPYRIGHTED.</p>
     </footer>
+
+    <!-- JavaScript -->
+    <script>
+        // Toggle fullscreen menu on mobile
+        function toggleMenu() {
+            const menu = document.getElementById('fullscreenMenu');
+            menu.classList.toggle('open');
+        }
+    </script>
+    
 </body>
 </html>
