--- a/shop.html
+++ b/shop.html
@@ -13,6 +13,7 @@
             color: #fff;
         }
 
+        /* Header Styles */
         header {
             background-color: #000;
             color: #fff;
@@ -29,22 +30,65 @@
             letter-spacing: 2px;
         }
 
-        nav {
+        /* Hamburger Menu */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            cursor: pointer;
+        }
+
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: #fff;
+            transition: all 0.3s ease;
+        }
+
+        /* Menu Bar */
+        .menu-bar {
             display: flex;
             gap: 20px;
         }
 
-        nav a {
+        .menu-bar nav a {
             color: #fff;
             text-decoration: none;
             font-weight: bold;
             text-transform: uppercase;
         }
 
-        nav a:hover {
+        .menu-bar nav a:hover {
             text-decoration: underline;
         }
 
+        /* Fullscreen Menu */
+        .fullscreen-menu {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            transform: translateX(100%);
+            transition: transform 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .fullscreen-menu.open {
+            transform: translateX(0);
+        }
+
+        .fullscreen-menu nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+        }
+
+        /* Section Styles */
         .section {
             padding: 60px 20px;
             margin: 0 auto;
@@ -58,67 +102,176 @@
             text-align: center;
         }
 
-        .products {
+        .artists-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            gap: 30px;
             margin-top: 40px;
+            justify-items: center;
         }
 
-        .product {
-            background-color: #111;
-            padding: 20px;
-            border-radius: 8px;
+        .artist {
+            cursor: pointer;
             text-align: center;
         }
 
-        .product img {
-            max-width: 100%;
-            border-radius: 8px;
-            margin-bottom: 15px;
+        .artist img {
+            width: 300px;
+            height: 300px;
+            border-radius: 15px;
+            transition: transform 0.3s;
         }
 
-        .product h3 {
-            font-size: 1.2em;
-            margin: 10px 0;
+        .artist img:hover {
+            transform: scale(1.1);
         }
 
-        .product p {
-            color: #aaa;
-            font-size: 0.9em;
+       /* Header styles */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+            background-color: rgba(0, 0, 0, 0.8);
+            position: relative;
+            z-index: 1;
         }
 
-        .product button {
-            margin-top: 10px;
-            padding: 10px 20px;
-            background-color: #fff;
-            color: #000;
-            border: none;
-            border-radius: 4px;
-            font-size: 1em;
+        header h1 {
+            margin: 0;
+            font-size: 1.8em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        /* Mobile Hamburger Menu */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
             cursor: pointer;
         }
 
-        .product button:hover {
-            background-color: #ddd;
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: #fff;
+            transition: all 0.3s ease;
         }
 
+        /* Menu Bar */
+        .menu-bar {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+        }
+
+        .menu-bar nav a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            text-transform: uppercase;
+            padding: 10px;
+            font-size: 14px;
+            transition: color 0.3s ease;
+        }
+
+        .menu-bar nav a:hover {
+            color: #4a90e2; /* Hover color */
+        }
+
+        /* Fullscreen mobile menu */
+        .fullscreen-menu {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            transform: translateX(100%);
+            transition: transform 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .fullscreen-menu.open {
+            transform: translateX(0);
+        }
+
+        .fullscreen-menu nav {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+        }
+
+        /* Content Section */
+        .content {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .content h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+        }
+
+        /* Footer styles */
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #000;
+            padding: 9px;
+            font-size: 9px;
+            line-height: 10px;
+            background-color: rgba(0, 0, 0, 0);
             color: #fff;
+            position: relative;
+            z-index: 1;
         }
 
-        footer p {
-            margin: 0;
-            font-size: 0.9em;
+        /* Media queries for responsiveness */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: center;
+                padding: 20px;
+            }
+
+            .hamburger {
+                display: flex;
+            }
+
+            .menu-bar {
+                display: none; /* Hide default menu on mobile */
+            }
+
+            footer {
+                font-size: 12px;
+                padding: 15px;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <h1>Oddity Music</h1>
+        <!-- Hamburger Menu for mobile -->
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+
+    <!-- Menu Bar (Visible on desktop) -->
+    <div class="menu-bar">
         <nav>
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
@@ -126,40 +279,52 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
-    </header>
+    </div>
 
+    <!-- Fullscreen Menu (Visible on mobile) -->
+    <div class="fullscreen-menu" id="fullscreenMenu">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="shop.html">Shop</a>
+            <a href="artists.html">Artists</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+
+    <!-- Section for Shop Artists -->
     <section class="section">
-        <h2>Shop</h2>
-       <div class="products">
-            <div class="product">
-                <img src="album1.jpg" alt="Album 1">
-                <h3>Album Title 1</h3>
-                <p>$20.00</p>
-                <button>Add to Cart</button>
+        <h2>Choose an Artist</h2>
+        <div class="artists-container">
+            <div class="artist" onclick="location.href='shop_xg.html'">
+                <img src="https://img.imageimg.net/artist/xg/img/product_1036713.jpg" alt="XG">
+                <h3>XG</h3>
             </div>
-            <div class="product">
-                <img src="album2.jpg" alt="Album 2">
-                <h3>Album Title 2</h3>
-                <p>$25.00</p>
-                <button>Add to Cart</button>
+            <div class="artist" onclick="location.href='shop_bnd.html'">
+                <img src="https://i.pinimg.com/736x/dd/89/7a/dd897a12de7d01ab8cb97e195bfd5761.jpg" alt="Artist 2">
+                <h3>BOYNEXTDOOR</h3>
             </div>
-            <div class="product">
-                <img src="merch1.jpg" alt="Merch 1">
-                <h3>Merch Item 1</h3>
-                <p>$15.00</p>
-                <button>Add to Cart</button>
-            </div>
-            <div class="product">
-                <img src="merch2.jpg" alt="Merch 2">
-                <h3>Merch Item 2</h3>
-                <p>$30.00</p>
-                <button>Add to Cart</button>
+            <div class="artist" onclick="location.href='shop_nj.html'">
+                <img src="https://i.pinimg.com/736x/48/a9/57/48a957f94c7cd729078f92998b8a3611.jpg" alt="Artist 3">
+                <h3>NAMJOON</h3>
             </div>
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Oddity Music. All rights reserved.</p>
+        <p>© ODDITY MUSIC. ALL RIGHTS RESERVED. <br class="mblock">ALL OF ODDITY MUSIC’S CONTENT IS COPYRIGHTED.</p>
     </footer>
+
+    <!-- JavaScript for Menu Toggle -->
+    <script>
+        // Toggle fullscreen menu on mobile
+        function toggleMenu() {
+            const menu = document.getElementById('fullscreenMenu');
+            menu.classList.toggle('open');
+        }
+    </script>
 </body>
 </html>
+
+
