--- a/shop_xg.html
+++ b/shop_xg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Oddity Music</title>
+    <title>Shop - Oddity Music</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,19 +49,109 @@
             padding: 60px 20px;
             margin: 0 auto;
             max-width: 1200px;
-            text-align: center;
         }
 
         .section h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
             text-transform: uppercase;
+            text-align: center;
         }
 
-        .section p {
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 40px;
+        }
+
+        .product {
+            background-color: #111;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        .product img {
+            max-width: 100%;
+            border-radius: 8px;
+            margin-bottom: 15px;
+        }
+
+        .product h3 {
             font-size: 1.2em;
-            line-height: 1.6;
+            margin: 10px 0;
+        }
+
+        .product p {
             color: #aaa;
+            font-size: 0.9em;
+        }
+
+        .product button {
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #fff;
+            color: #000;
+            border: none;
+            border-radius: 4px;
+            font-size: 1em;
+            cursor: pointer;
+        }
+
+        .product button:hover {
+            background-color: #ddd;
+        }
+		 .content {
+            flex: 1;
+            margin-top: 50px;
+        }
+
+        .artists-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .artist {
+            position: relative;
+            cursor: pointer;
+        }
+
+        .artist img {
+            width: 200px;
+            height: 200px;
+            border-radius: 10px;
+            transition: transform 0.3s;
+        }
+
+        .artist img:hover {
+            transform: scale(1.1);
+        }
+
+        .albums {
+            display: none;
+            margin-top: 20px;
+        }
+
+        /* Header styles */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+            background-color: rgba(0, 0, 0, 0.8);
+            position: relative;
+            z-index: 1;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 1.8em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         /* Mobile Hamburger Menu */
@@ -179,52 +269,70 @@
     </style>
 </head>
 <body>
-    <!-- Header -->
     <header>
         <h1>Oddity Music</h1>
-        <!-- Hamburger Menu for mobile -->
-        <div class="hamburger" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="shop.html">Shop</a>
+            <a href="artists.html">Artists</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
 
-    <!-- Menu Bar (Visible on desktop) -->
-    <div class="menu-bar">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="shop.html">Shop</a>
-            <a href="artists.html">Artists</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>
-
-    <!-- Fullscreen Menu (Visible on mobile) -->
-    <div class="fullscreen-menu" id="fullscreenMenu">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="shop.html">Shop</a>
-            <a href="artists.html">Artists</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>
-
     <section class="section">
-        <h2>About Us</h2>
-        <p>Welcome to Oddity Music, a home for artists who dare to be different. We are a music label dedicated to championing unique voices, innovative sounds, and boundary-pushing creativity.</p>
+        <h2>Shop</h2>
+      
+ <div class="content">
+        <h2>XG</h2>
+        </div>
+		<div class="albums" id="artist1-albums">
 
-<p>At Oddity Music, we believe that the most powerful stories come from those who embrace their individuality. Whether it’s through soulful melodies, bold experimentation, or heartfelt lyrics, we are here to amplify the art that moves people.</p>
-
-<p>Our mission is to nurture talent, celebrate originality, and connect artists with audiences who crave something truly extraordinary. Join us as we redefine what it means to make music that stands out.</p>
+	   </div>
+	   <div class="products">
+            <div class="product">
+                <img src="https://img.imageimg.net/artist/xg/img/product_1035124.jpg" alt="Album 1">
+                <h3>3rd Single</h3>
+				<h3>「SHOOTING STAR」</h3>
+                <p>$20.00</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="https://img.imageimg.net/artist/xg/img/product_1034520.jpg" alt="Album 2">
+                <h3>2nd Single</h3>
+				<h3>「MASCARA」</h3>
+                <p>$25.00</p>
+                <button>Add to Cart</button>
+            </div>
+            <div class="product">
+                <img src="https://img.imageimg.net/artist/xg/img/product_1036388.jpg" alt="Album 3">
+                <h3>5th Single</h3>
+				<h3>「WOKE UP」</h3>
+                <p>$25.00</p>
+                <button>Add to Cart</button>
+            </div>
+			<div class="product">
+                <img src="https://img.imageimg.net/artist/xg/img/product_1036713.jpg" alt="Album 4">
+                <h3>The 1st pre-release song 'SOMETHING AIN'T RIGHT' from XG’s 2st Mini Album</h3>
+                <p>$30.00</p>
+                <button>Add to Cart</button>
+            </div>
+        </div>
     </section>
+	
 
     <footer>
 		<p>© ODDITY MUSIC. ALL RIGHTS RESERVED. 
 		<br class="mblock">ALL OF ODDITY MUSIC’S CONTENT IS COPYRIGHTED.</p>
     </footer>
+	<script>
+        function toggleMenu() {
+            const menuBar = document.querySelector('.menu-bar');
+            const hamburger = document.querySelector('.hamburger');
+            menuBar.classList.toggle('active');
+            hamburger.classList.toggle('active');
+        }
+    </script>
 	
 </body>
 </html>
